crates/rome_formatter/tests/specs/prettier/js/ignore/ignore-2.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: ignore-2.js

---
# Input
```js
// #8736

function HelloWorld() {
  return (
    <div
      {...{} /*
      // @ts-ignore */ /* prettier-ignore */}
      invalidProp="HelloWorld"
    >
      test
    </div>
  );
}

a = <div {.../* prettier-ignore */b}/>
a = <div {...b/* prettier-ignore */}/>
a = <div {.../* prettier-ignore */{}}/>
a = <div {...{/* prettier-ignore */}}/>
a = <div {...{}/* prettier-ignore */}/>

```

# Output
```js
// #8736

function HelloWorld() {
  return (
    <div
      {...{} /*
      // @ts-ignore */ /* prettier-ignore */}
  invalidProp="HelloWorld"
    >
      test
    </div>
  )
}

a = <div {.../* prettier-ignore */b};
/>
a = <div {...b/ * rome - ignore;
format: prettier;
ignore */
}/>
a = <div {.../* prettier-ignore */
{}
}/>
a = <div {...{/* prettier-ignore */}}/>
a = <div {...{}/* prettier-ignore */}/>

```

# Errors
```
error: unterminated regex literal
   ┌─ ignore-2.js:20:1
   │
19 │ a = <div {...{}/* rome-ignore format: prettier ignore */}/>
   │                                                          - a regex literal starts there...
20 │ 
   │ ^ ...but the file ends here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ ignore-2.js:5:5
  │  
5 │ ┌     <div
6 │ │       {...{} /*
7 │ │       // @ts-ignore */ /* rome-ignore format: prettier ignore */}
  │ └─────────────────────────────────────────────────────────────────^ TypeScript only syntax

error[SyntaxError]: expected `')'` but instead found `invalidProp`
  ┌─ ignore-2.js:8:7
  │
8 │       invalidProp="HelloWorld"
  │       ^^^^^^^^^^^ unexpected

error[SyntaxError]: Expected an expression for the right hand side of a `<`, but found an operator instead
   ┌─ ignore-2.js:11:6
   │
11 │     </div>
   │     -^ But this operator was encountered instead
   │     │ 
   │     This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ ignore-2.js:12:3
   │
12 │   );
   │   ^ Expected an expression here

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ ignore-2.js:15:5
   │
15 │ a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ ignore-2.js:15:57
   │    
15 │ ┌   a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │ │ ┌─────────────────────────────────────────────────────────^
16 │ │ │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │ └─│───────────────' ...Which is required to end this statement
   │   └───────────────^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ ignore-2.js:16:30
   │  
15 │   a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │ ┌─────────────────────────────────────────────────────────'
16 │ │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │ │                              ^^^^^^ An explicit or implicit semicolon is expected here...
   │ └───────────────────────────────────' ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ ignore-2.js:16:47
   │
16 │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │                                      ---------^^^^^^
   │                                      │        │
   │                                      │        An explicit or implicit semicolon is expected here...
   │                                      ...Which is required to end this statement

error[SyntaxError]: Expected an expression for the right hand side of a `*`, but found an operator instead
   ┌─ ignore-2.js:16:55
   │
16 │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │                                                      -^ But this operator was encountered instead
   │                                                      │ 
   │                                                      This operator requires a right hand side value

error[SyntaxError]: expected an expression but instead found '}'
   ┌─ ignore-2.js:16:56
   │
16 │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │                                                        ^ Expected an expression here

error[SyntaxError]: expected a statement but instead found '}/>
a = <div {...{/* rome-ignore format: prettier ignore */}}/>
a = <div {...{}/* rome-ignore format: prettier ignore */}/>
'
   ┌─ ignore-2.js:17:57
   │  
17 │   a = <div {.../* rome-ignore format: prettier ignore */{}}/>
   │ ┌─────────────────────────────────────────────────────────^
18 │ │ a = <div {...{/* rome-ignore format: prettier ignore */}}/>
19 │ │ a = <div {...{}/* rome-ignore format: prettier ignore */}/>
20 │ │ 
   │ └^ Expected a statement here


```


